Eliminacion de comentarios innecesarios o excesivos y adiccion de algunos necesarios, aplicacion de comentarios en clase por profesor

--- a/contacto.html
+++ b/contacto.html
@@ -13,8 +13,8 @@
 
   <header>
 
-    <img src="img/logo.png" alt="Logo PatoConsultas" class="logo">
-    <span>PatoConsultas | Soluciones Tecnológicas</span>
+    <a href="index.html"><img src="img/logo.png"  alt="Logo PatoConsultas" class="logo"></a>
+    <span><a href="index.html" class="no_highlight">PatoConsultas | Soluciones Tecnológicas</a></span>
     <nav class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -26,7 +26,6 @@
   </header>
 
   <main>
-    <h1>Contacto</h1>
 
     <form action="https://morning-paper-a0fc.contry-1990.workers.dev" method="POST">
 
