--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <header>
 
-    <img src="img/logo.png" alt="Logo PatoConsultas" class="logo">
-    <span>PatoConsultas | Soluciones Tecnológicas</span>
+    <a href="index.html"><img src="img/logo.png"  alt="Logo PatoConsultas" class="logo"></a>
+    <span><a href="index.html" class="no_highlight">PatoConsultas | Soluciones Tecnológicas</a></span>
     <nav class="menu">
       <ul class="menu-list">
         <li><a href="index.html">Inicio</a></li>
@@ -47,7 +47,7 @@
       
       <section class="service">
         
-        <h2 class="content-title">Desarrollo Web</h2>
+        <h2>Desarrollo Web</h2>
         <p>
           Diseñamos y desarrollamos sitios web de alta calidad mediante el uso de las tecnologías más avanzadas del
           sector. Creamos soluciones ágiles, seguras y plenamente optimizadas para ofrecer un rendimiento superior. Cada
@@ -55,28 +55,28 @@
           moderna, funcional y preparada para evolucionar junto a tu crecimiento.
         </p>
       </section>
-      <section class="service-item2">
-        <h2 class="content-title">Cloud computing</h2>
+      <section class="service">
+        <h2 >Cloud computing</h2>
         <p>
           Ofrecemos soluciones de cloud computing para optimizar tus procesos y mejorar la eficiencia de tu negocio.
         </p>
       </section>
-      <section class="service-item3">
-        <h2 class="content-title">Marketing digital</h2>
+      <section class="service">
+        <h2 >Marketing digital</h2>
         <p>
           Desarrollamos e implementamos estrategias de marketing digital orientadas a incrementar la visibilidad de tu
           marca, captar nuevos clientes y potenciar tus ventas en el entorno online de forma sostenible y eficaz.
         </p>
       </section>
       <section class="service">
-        <h2 class="content-title">Soporte Técnico especializado en empresas</h2>
+        <h2 >Soporte Técnico especializado en empresas</h2>
         <p>
           Ofrecemos soporte técnico especializado con el objetivo de garantizar el correcto funcionamiento de tus
           sistemas y resolver cualquier incidencia de forma ágil, eficaz y profesional.
         </p>
       </section>
       <section class="service">
-        <h2 class="content-title">Auditorias informaticas</h2>
+        <h2 >Auditorias informaticas</h2>
         <p>
           Llevamos a cabo auditorías informáticas orientadas a evaluar la seguridad, la eficiencia y el grado de
           cumplimiento de tus sistemas tecnológicos, identificando oportunidades de mejora y proponiendo soluciones
@@ -84,7 +84,7 @@
         </p>
       </section>
       <section class="service">
-        <h2 class="content-title">Ciberseguridad</h2>
+        <h2 >Ciberseguridad</h2>
         <p>
           Realizamos un análisis exhaustivo de la seguridad de tus servicios informáticos con el objetivo de prevenir el
           robo de datos y las brechas de ciberseguridad. Implementamos medidas avanzadas de protección para salvaguardar
