--- a/proyecto-estrella.html
+++ b/proyecto-estrella.html
@@ -12,8 +12,8 @@
 <body>
 
   <header>
-    <img src="img/logo.png" alt="Logo PatoConsultas" class="logo">
-    <span>PatoConsultas | Soluciones Tecnológicas</span>
+    <a href="index.html"><img src="img/logo.png"  alt="Logo PatoConsultas" class="logo"></a>
+    <span><a href="index.html" class="no_highlight">PatoConsultas | Soluciones Tecnológicas</a></span>
     <nav class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -24,10 +24,8 @@
     </nav>
   </header>
 
-  <!-- Flexbox Wrapper for Main + Aside layout -->
   <div class="project-wrapper">
 
-    <!-- MAIN COLUMN: Flex-grow -->
     <main class="project-main">
       <h1>Sistema de Gestión de Reservas "DuckBook"</h1>
 
@@ -50,7 +48,6 @@
       <h2>Planes de Precios</h2>
       <p>Elige el plan que mejor se adapte al tamaño de tu empresa.</p>
 
-      <!-- PRICING TABLE -->
       <table class="pricing-table">
         <thead>
           <tr>
@@ -100,7 +97,6 @@
 
     </main>
 
-    <!-- SIDEBAR COLUMN: Fixed width -->
     <aside class="project-sidebar">
       <div class="sidebar-widget">
         <h3>Ficha Técnica</h3>
