--- a/cronologia.html
+++ b/cronologia.html
@@ -13,8 +13,8 @@
 <body>
 
   <header>
-    <img src="img/logo.png" alt="Logo PatoConsultas" class="logo">
-    <span>PatoConsultas | Soluciones Tecnológicas</span>
+    <a href="index.html"><img src="img/logo.png"  alt="Logo PatoConsultas" class="logo"></a>
+    <span><a href="index.html" class="no_highlight">PatoConsultas | Soluciones Tecnológicas</a></span>
     <nav class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
